# TGbot_template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml  requirements.txt  template.env
migrations/: env.py
migrations/versions/: 2023-09-06_15:40_475079da006e_initial.py
tg_bot_template/: __init__.py  bot.py  config.py  db.py  filters.py  models.py  utils.py
tg_bot_template/bot_content/: bot_feature.py  classes.py  emojis.py  errors.py  features.py  messages.py
tg_bot_template/bot_infra/: callbacks.py  filters.py  states.py
tg_bot_template/bot_lib/: aiogram_overloads.py  bot_feature.py  db_dispatcher.py  emojis.py  utils.py
tg_bot_template/db_infra/: __init__.py  db.py  models.py
tg_bot_template/db_repos/: base.py  tables.py  users.py
